--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="details">
             <div class="title">
-                <p class="pap">ROCK</p>
+                <b class="pap">ROCK</b>
                 <p class="pap">PAPER</p>
                 <p class="pap">SCISSORS</p>
             </div>
